# emel.cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  clang_includes.txt  coroutine-plan.md  goal.md
.codex/: config.toml  gsd-file-manifest.json  hooks.json
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.10-MILESTONE-AUDIT.md  v1.11-MILESTONE-AUDIT.md  v1.18-MILESTONE-AUDIT.md  v1.20-MILESTONE-AUDIT.md  v1.24-MILESTONE-AUDIT.md  v1.25-MILESTONE-AUDIT.md  v1.26-MILESTONE-AUDIT.md  v1.27-MILESTONE-AUDIT.md  v1.6-MILESTONE-AUDIT.md  v1.9-MILESTONE-AUDIT.md
cmake/: sml_version.cmake
docs/: arm-first-inventory.md  benchmark.md  benchmarking.md  benchmarks.md  buffer_allocator.md  claude-async.plan.md  codex-async.plan.md  compliance-checklist.md  compliance-report.md  compliance.report.md  decoder.notes.md  decoder.plan.md  determinism.md  gaps.md  gemini-async.plan.md  model.audit.md  notes.md  roadmap.md  runtime-conditionals-todo.md  scaffold.plan.md  sml.md  sml.rules.md  token_usage.md
scripts/: bench.sh  bench_compare_gate.awk  bench_diarization_compare.sh  bench_embedding_compare.sh  bench_embedding_reference_liquid.sh  bench_generation_compare.sh  bench_generation_reference_llama_cpp.sh  bench_mimi_compare.sh  bench_moshi_lm_compare.sh  bench_personaplex_compare.sh  bench_whisper_compare.sh  bench_whisper_reference_whisper_cpp.sh  bench_whisper_single_thread.sh  build_jobs.sh  build_with_zig.sh  check_determinism.sh  check_domain_boundaries.sh  (+19 more)
tools/bench/: CMakeLists.txt  batch_sanitizer_bench.cpp  batch_splitter_bench.cpp  bench_cases.hpp  bench_common.hpp  bench_dependency_manifest.cpp  bench_dependency_manifest.hpp  bench_disabled_cases.cpp  bench_main.cpp  bench_runner.cpp  bench_runner.hpp  bench_runner_contract.hpp  bench_runner_registry.cpp  bench_runner_registry.hpp  bench_runner_tests.cpp  benchmark_variant_registry.hpp  buffer_allocator_bench.cpp  compare_flash_baseline.py  dependency_manifest.md  dependency_manifest.txt  diarization_compare.py  diarization_compare_contract.hpp  diarization_compare_tests.cpp  diarization_pytorch_reference_requirements.txt  diarization_sortformer_onnx_reference.py  diarization_sortformer_pytorch_reference.py  embedding_compare.py  embedding_compare_contract.hpp  embedding_compare_tests.cpp  embedding_generator_bench.cpp  embedding_generator_bench_helpers.hpp  embedding_generator_bench_main.cpp  embedding_reference_bench.cpp  embedding_reference_bench_main.cpp  embedding_reference_python.py  embedding_variant_manifest.hpp  generation_bench.cpp  generation_compare.py  generation_compare_contract.hpp  generation_compare_tests.cpp  (+38 more)
tools/bench/batch/: planner_bench.cpp
tools/bench/diarization/: sortformer_bench.cpp  sortformer_fixture.hpp
tools/bench/embedding_variants/: README.md  te75m_text_red_square_full_dim.json
tools/bench/embedding_variants/te75m/audio/: pure_tone_440hz_full_dim.json
tools/bench/embedding_variants/te75m/image/: red_square_full_dim.json
tools/bench/gbnf/: bench_main.cpp  parser_bench.cpp  rule_parser_bench.cpp
tools/bench/generation_prompts/: README.md  single_user_hello.json
tools/bench/generation_variants/: README.md
tools/bench/generation_variants/lfm2/single_user_hello/parity/: max_tokens_10.json  max_tokens_100.json
tools/bench/generation_variants/lfm2/single_user_hello/single_lane/: max_tokens_1.json
tools/bench/generation_variants/lfm2_230m/single_user_hello/parity/: max_tokens_1.json  max_tokens_100.json
tools/bench/generation_variants/qwen3/single_user_hello/: max_tokens_1.json  max_tokens_100.json  max_tokens_1000.json
tools/bench/generation_variants/qwen3_4b/single_user_hello/: max_tokens_1.json  max_tokens_10.json  max_tokens_100.json  max_tokens_1000.json
tools/bench/generation_workloads/: README.md  gemma4_single_user_hello_max_tokens_1.json  gemma4_single_user_hello_max_tokens_10.json  gemma4_single_user_hello_max_tokens_100.json  gemma4_single_user_hello_max_tokens_1000.json  lfm2_single_user_hello_max_tokens_1.json  qwen3_single_user_hello_max_tokens_10.json
tools/bench/generation_workloads/lfm2/single_user_hello/parity/: max_tokens_1000.json
tools/bench/graph/: processor_bench.cpp
tools/bench/kernel/: aarch64_bench.cpp  bench_common.hpp  f32_matvec_bench.cpp  flash_attention_bench.cpp  x86_64_bench.cpp
tools/bench/logits/: bench_common.hpp  sampler_bench.cpp  validator_bench.cpp
tools/bench/memory/: bench_common.hpp  hybrid_bench.cpp  kv_bench.cpp  recurrent_bench.cpp
tools/bench/model/tensor/: window_streaming_bench.cpp
tools/bench/reference_backends/: README.md  liquid_cpp.json  llama_cpp_generation.json  moshi_cpp_mimi.json  personaplex_mlx_mimi.json  te_python_goldens.json  te_python_live.json  whisper_cpp_asr.json
tools/bench/speech/: codec_mimi_bench.cpp  lm_moshi_bench.cpp  mimi_emel_parity_runner.cpp  moshi_reference_driver.cpp  personaplex_emel_runner.cpp  personaplex_mlx_mimi_driver.py
tools/bench/testdata/: generation_compare_current.txt  generation_pre_flash_baseline_fail.txt  generation_pre_flash_baseline_pass.txt
tools/bench/text/encoders/: bench_common.hpp  bpe_bench.cpp  fallback_bench.cpp  plamo2_bench.cpp  rwkv_bench.cpp  spm_bench.cpp  ugm_bench.cpp  wpm_bench.cpp
tools/bench/text/generator/: decode_wavefront_bench.cpp  parallel_matmul_bench.cpp
tools/bench/text/jinja/: formatter_bench.cpp  parser_bench.cpp
tools/bench/text/tokenizer/: tokenizer_bench.cpp
tools/bench/text/tokenizer/preprocessor/: bench_common.hpp  bpe_bench.cpp  plamo2_bench.cpp  rwkv_bench.cpp  spm_bench.cpp  ugm_bench.cpp  wpm_bench.cpp
tools/decode_wavefront_eval/: CMakeLists.txt  main.cpp
tools/determinism_check/: CMakeLists.txt  main.cpp
tools/docsgen/: CMakeLists.txt  docsgen.cpp  docsgen_machine_emit.hpp  docsgen_tensor_view_policy.hpp
tools/embedded_size/emel_probe/: CMakeLists.txt  main.cpp
tools/embedded_size/reference_probe/: CMakeLists.txt  main.cpp
(+4885 files in other folders)
